--- a/shopping/store/templates/store/checkout.html
+++ b/shopping/store/templates/store/checkout.html
@@ -1,9 +1,7 @@
-{% extends "store/main.html" %}
-
+{% extends 'store/main.html' %}
 {% load static %}
 
 {% block content %}
-
 <div class="row">
     <div class="col-lg-6">
         <div class="box-element" id="form-wrapper">
@@ -49,22 +47,107 @@
 
     <div class="col-lg-6">
         <div class="box-element">
-            <a class="btn btn-outline-dark" href="{% url 'cart' %}">&#x2190;Back to Cart</a>
+            <a class="btn btn-outline-dark" href="{% url 'cart' %}">Back to Cart</a>
         </div>
         <hr>
         <h3>Order Summary</h3>
         <hr>
+        {% for item in items %}
             
         <div class="cart-row">
-            <div style="flex:2"><img class="row-image" src="{% static 'images/placeholder.png' %}"></div>
-            <div style="flex:2"><p>Product 1</p></div>
-            <div style="flex:1"><p>$20</p></div>
-            <div style="flex:1"><p>x2</p></div>
+            <div style="flex:2"><img class="row-image" src="{{item.product.imageURL}}"></div>
+            <div style="flex:2"><p>{{item.product.name}} 1</p></div>
+            <div style="flex:1"><p>${{item.product.price}}</p></div>
+            <div style="flex:1"><p>x {{item.quantity}}</p></div>
         </div>
-        <h5>Item: 2</h5>
-        <h5>Total: $40</h5>
+        {% endfor %}
+        <h5>Item:   {{ order.get_cart_items }}</h5>
+        <h5>Total:  ${{ order.get_cart_total|floatformat:2 }}</h5>
     </div>
 </div>
 
-{% endblock %}
+<script type="text/javascript">
+    var shipping = '{{order.shipping}}'
+    var total ='{{order.get_cart_total}}'
 
+    if(shipping == 'False'){
+        document.getElementById('shipping-info').innerHTML = ''
+    }
+
+    if (user != 'AnonymousUser'){
+        document.getElementById('user-info').innerHTML = ''
+    }
+
+    if (shipping == 'False' && user != 'AnonymousUser'){
+        //Hide entire form if user is logged in and shipping is false
+        document.getElementById('form-wrapper').classList.add("hidden")
+        //show payment if logged in user wants to buy an item that does not require shipping
+        document.getElementById('payment-info').classList.remove("hidden")
+    }
+
+    var form = document.getElementById('form')
+
+    form.addEventListener('submit', function(e){
+        e.preventDefault()
+        console.log('Form submitted...')
+        document.getElementById('form-button').classList.add('hidden')
+        document.getElementById('payment-info').classList.remove('hidden')
+    })
+
+    document.getElementById('make-payment').addEventListener('click', function(e){
+        submitFormData()
+    })
+
+    function submitFormData(){
+        console.log('Payment button clicked')
+
+        var userFormData = {
+            'name':null,
+            'email':null,
+            'total':total,
+        }
+
+        var shippingInfo = {
+            'addres':null,
+            'city':null,
+            'state':null,
+            'zipcode':null,
+        }
+
+        if(shipping != 'False'){
+            shippingInfo.address = form.address.value
+            shippingInfo.city = form.city.value
+            shippingInfo.state = form.state.value
+            shippingInfo.zipcode = form.zipcode.value
+        }
+
+        if(user == 'AnonymousUser'){
+            userFormData.name = form.name.value
+            shippingInfo.email = form.email.value
+        }
+
+        var url = '/process_order/'
+        fetch(url, {
+            method:'POST',
+            headers:{
+                'Content-Type':'application/json',
+                'X-CSRFToken':csrftoken,
+            },
+            body:JSON.stringify({'form': userFormData, 'shipping':shippingInfo})
+        })
+    
+        .then((response) =>{
+            return response.json()
+        })
+    
+        .then((data) =>{
+            console.log('Success', data)
+            alert('Transaction completed')
+            window.location.href = "{% url 'store' %}"
+        })
+
+    }
+
+</script>
+
+{% endblock content %}
