--- a/shopping/store/templates/store/store.html
+++ b/shopping/store/templates/store/store.html
@@ -1,24 +1,21 @@
-{% extends "store/main.html" %}
-
+{% extends 'store/main.html' %}
 {% load static %}
 
 {% block content %}
+<div class="row">
+    {% for product in products %}
+    <div class="col-lg-4">
+        <img class="thumbnail" src="{{product.imageURL}}">
+        <div class="box-element product">
+            <h6><strong>{{product.name}}</strong></h6>
+            <hr>
 
-    <div class="row">
-        <div class="col-lg-4">
-            <img class="thumbnail" src="{% static 'images/placeholder.' %}" alt="">
-            <div class="box-element product">
-                <h6><strong>Product</strong></h6>
-                <hr>
-                <button class="btn btn-outline-secondary add-btn">Add to Cart</button>
-                <a class="btn btn-outline-success" href="#">View</a>
-                <h4 style="display: inline-block; float: right;">$ 20</h4>
-            </div>
+            <button data-product={{product.id}} data-action="add" class="btn btn-outline-secondary add-btn update-cart">Add to Cart</button>
+            <a class="btn btn-outline-success" href="#">View</a>
+            <h4 style="display: inline-block; float: right"><strong>${{product.price|floatformat:2}}</strong></h4>
+
         </div>
     </div>
-
-{% endblock %}
-
-
-
-<img src="{% static 'images/cart.png' %}" alt="">
+    {% endfor %}
+</div>
+{% endblock content %}
